# wifi-clock

./: README  README.md  dst_table.lisp
doc/: snmp_dump.txt
hw/: sym-lib-table  wifi_clock-cache.lib  wifi_clock.kicad_pcb  wifi_clock.kicad_pcb-bak  wifi_clock.lib  wifi_clock.net  wifi_clock.pro  wifi_clock.sch  wifi_clock.sch-bak
pico_w/: CMakeLists.txt  LICENSE  README  dht.c  dht.h  display.c  display.h  dst_table.h  main.c  ntp.c  ntp.h  snmp.c  snmp.h  wifi.c  wifi.h  wifi_clock.c
